2004-05-08 21:57  chadfowler

	* Using Gem::RubyGemsVersion to match the release number.  If we need to use this as an internal version format specifier in the future, we can use the Gem::Version semantics.

2004-05-30 14:33 gsinclair

        * bin/gem: Split --help into --help (basic), --help-options (what
          --help used to be), and --help-examples.

2004-04-30 15:57  chadfowler

	* bin/gem: --install-stub is no longer the default ;)

2004-04-30 15:51  chadfowler

	* lib/rubygems/installer.rb: Rich Kilmer (who kicks butt) figured
	  out how to fix the library stub stuff.

2004-04-29 19:12  chadfowler

	* lib/rubygems/doc_manager.rb: Dick Davies fixed a bug in the doc
	  generator.

2004-04-29 13:41  gsinclair

	* lib/rubygems/installer.rb: Added skeleton code and comments to
	  uninstall stub apps and libs

2004-04-29 12:20  gsinclair

	* install.rb: Don't install library stub for 'sources'

2004-04-29 12:20  gsinclair

	* lib/rubygems/installer.rb: Improvements to library stub
	  installation: * don't overwrite existing file (emit warning) *
	  nice warning if there's a permission problem * observe
	  --[no-]install-stub flag (rather, observe the argument to
	  #install)

2004-04-29 12:16  gsinclair

	* bin/gem: --install-stub is now the default

2004-04-26 20:20  chadfowler

	* test/test_remote_installer.rb: Cleaning up after Gavin and his
	  test-breaking self. ;)

2004-04-26 12:06  gsinclair

	* bin/gem, lib/rubygems/installer.rb,
	  lib/rubygems/remote_installer.rb: Installing a gem now causes a
	  library stub to be installed as well, allowing you to require
	  'package' without knowing it's a gem.

2004-04-25 23:18  chadfowler

	* lib/rubygems/: installer.rb, specification.rb: Prompt user if
	  trying to uninstall a gem that other gems *may* depend on.

2004-04-25 09:27  chadfowler

	* test/test_remote_installer.rb: Changed expected test results to
	  match new (old) gem naming scheme--"ruby" doesn't appear as a
	  platform in the gem name.
